--- a/Expanding-Cards/style.css
+++ b/Expanding-Cards/style.css
@@ -22,6 +22,11 @@ header .I-am {
     left: 3%;
 }
 
+header a, a:active, a:hover, a:visited{
+    text-decoration: none;
+    color: inherit;
+}
+
 .container {
     display: flex;
     width: 90vw;
