--- a/Progress-Steps/style.css
+++ b/Progress-Steps/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');
 
 :root {
     --line-border-fill: #373737;
@@ -11,8 +13,10 @@
 
 
 body {
-    /* background-image: url('images/winter.jpg'); */
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-color: #f6f7fb;
     font-family: 'Muli', sans-serif;
     display: flex;
@@ -21,12 +25,13 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
+    transition: all 700ms ease;
   }
 
   .container {
       text-align: center;
       position: absolute;
-      bottom: 0;      
+      bottom: 10%;      
   }
 
   .progress-container {
@@ -105,18 +110,13 @@ body {
       cursor: not-allowed;
   }
 
-
-  .frame {
-    /* border: 5px solid black; */
-    /* border-radius: 20px; */
-    /* top: 0; */
+.quote{
+    font-size: 36px;
+    /* font-family: 'Great Vibes', cursive; */
+    font-family: 'Cedarville Cursive', cursive;
+    color: #FDB833;
+    mix-blend-mode: difference;
+    height: 200px;
     position: absolute;
-    z-index: -10;
-    width: 100vw;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    transition: all 700ms ease-in;
-    margin-bottom: 10px;
+    top: 5%;
 }
