Glide and Hover

--- a/Glide-and-Hover/css/main.css
+++ b/Glide-and-Hover/css/main.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
+/* Make text color: #25609F */
 
 *{
     margin: 0;
     padding: 0;    
     font-family: 'Oswald', sans-serif;
+    font-weight: bold;
  }
 
  body {
@@ -29,7 +31,7 @@
  nav {
      display: flex;
      padding: 25px 150px;
-     color: white;
+     color: #25609F;
      justify-content: space-between;
      align-items: center;
  }
@@ -99,7 +101,7 @@ nav ul li {
 
 .index p {
     opacity: 0;
-    color: white;
+    color: #25609F;
     font-size: 10px;
     font-weight: bold;
     z-index: 9;
@@ -145,7 +147,7 @@ nav ul li {
 
 .text h4 {
     font-size: 120px;
-    color: white;
+    color: #25609F;
     position: relative;
 }
 
@@ -158,9 +160,9 @@ nav ul li {
 }
 
 #description p {
-    color: white;
+    color: #25609F;
     font-size: 12px;
-    max-height: 55px;
+    height: 55px;
     opacity: 0.8;
     position: relative;
 }
@@ -210,7 +212,7 @@ nav ul li {
 }
 
 .slider-image {
-    height: 400px;
+    height: 300px;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
@@ -228,7 +230,7 @@ nav ul li {
 }
 
 .slide p {
-    color: white;
+    color: #25609F;
     font-size: 14px;
 }
 
@@ -243,7 +245,7 @@ nav ul li {
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: white;
+    background: #25609F;
     opacity: 0.5;
 }
 
