--- a/3D-Navigation/style.css
+++ b/3D-Navigation/style.css
@@ -42,14 +42,15 @@ button {
 
 .logo {
   font-size: 1.1rem;
-  font-weight: 600;
+  font-weight: 400;
   text-transform: uppercase;
   letter-spacing: 2px;
   line-height: 4rem;
 }
 
 .logo span {
-  font-weight: 300;
+  font-weight: 700;
+  color: #612940
 }
 
 .hamburger-menu {
@@ -209,7 +210,7 @@ ul {
 }
 
 .links a:hover {
-  color: #fff;
+  color: #612940;
 }
 
 .container.active .links a {
