--- a/Materialize-background/style.css
+++ b/Materialize-background/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Sacramento', cursive;
 }
 
 body {
@@ -22,7 +25,7 @@ section h3 {
     height: 100vh;
     text-align: center;
     line-height: 100vh;
-    font-size: 5vw;
+    font-size: 7vw;
     color: #fff;
 }
 
