--- a/Color-Palette-Generator/style.css
+++ b/Color-Palette-Generator/style.css
@@ -34,8 +34,8 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    background: #f00;
-    border: 2px solid #fff;
+    background: #fff;
+    border: 2px solid rgba(0,0,0,0.2);
     color: #fff;
     font-size: 1.5em;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
