--- a/RE-Double-Helix/style.css
+++ b/RE-Double-Helix/style.css
@@ -47,7 +47,7 @@ span::before, span::after {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #8a1d1b;
+    background: #ffffff;
     position: absolute;
     top: calc(50% - 10px);
 }
@@ -57,6 +57,10 @@ span::before {
 }
 span::after {
     right: -18px;
+}
+
+span:nth-child(3n):before, span:nth-child(3n):after {
+    background: #8a1d1b;
 }
 
 @keyframes rotate {
