--- a/Landing-Div-Hover/style.css
+++ b/Landing-Div-Hover/style.css
@@ -51,31 +51,41 @@
 }
 
 .col {
-    flex-basis: 50%;
+    margin: 0 auto;
 }
 
 h1 {
     color: #EEE6D3;
     font-size: 100px;
+    padding-left: 20px;
 }
 
 p {
     color: #EEE6D3;
     font-size: 11px;
     line-height: 15px;
+    padding-left: 20px;
 }
 
+.cardcontainer {
+    height: 700px;
+    width: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
 .card {
-    width: 200px;
-    height: 230px;
-    display: inline-block;
+    width: 250px;
+    height: 300px;
     border-radius: 10px;
-    padding: 15px;
-    box-sizing: border-box;
-    cursor: pointer;
     margin: 10px 15px;
     background: #EEE6D3;
-    transition: transform 0.5s;
+    transition: transform 0.6s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     /* background-position: center; 
         background-size: cover;*/
 }
