--- a/tailwindcss-react/src/index.css
+++ b/tailwindcss-react/src/index.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-.menu-card {
+/* .menu-card {
     @apply flex flex-col justify-center items-center bg-white h-screen font-mono py-40;
 }
 
 .center-content {
     @apply flex flex-col justify-center items-center
-}
+} */
