--- a/RE-Double-Helix/style.css
+++ b/RE-Double-Helix/style.css
@@ -1,131 +1,133 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald');
+@import url("https://fonts.googleapis.com/css?family=Oswald");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Oswald', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Oswald", sans-serif;
 }
 
-
 body {
-    min-height: 100vh;
-    background: #0e0e0e;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://res.cloudinary.com/dvug8hy5k/image/upload/v1616134758/Portfolio1/umbrellacorp_bcupnd.png");
-    background-size: cover;
-    background-position: center;
+  min-height: 100vh;
+  background: #0e0e0e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("https://res.cloudinary.com/dvug8hy5k/image/upload/v1616134758/Portfolio1/umbrellacorp_bcupnd.png");
+  background-size: cover;
+  background-position: center;
 }
 
 div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    animation: rotate 15s linear infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  animation: rotate 15s linear infinite;
 }
 
 div span {
-    width: 250px;
-    height: 10px;
-    border: 2px dashed #f5f5f5;
-    margin: 10px;
-    position: relative;
-    transform-style: preserve-3d;
-    animation: anim 2s linear infinite;
+  width: 250px;
+  height: 10px;
+  border: 2px dashed #f5f5f5;
+  margin: 10px;
+  position: relative;
+  transform-style: preserve-3d;
+  animation: anim 2s linear infinite;
 }
 
 span:nth-child(3n) {
-    border: 2px dashed #8a1d1b;
+  border: 2px dashed #8a1d1b;
 }
 
-span::before, span::after {
-    content: "";
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: #ffffff;
-    position: absolute;
-    top: calc(50% - 10px);
+span::before,
+span::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #ffffff;
+  position: absolute;
+  top: calc(50% - 10px);
 }
 
 span::before {
-    left: -18px;
+  left: -18px;
 }
 span::after {
-    right: -18px;
+  right: -18px;
 }
 
-span:nth-child(3n):before, span:nth-child(3n):after {
-    background: #8a1d1b;
+span:nth-child(3n):before,
+span:nth-child(3n):after {
+  background: #8a1d1b;
 }
 
 @keyframes rotate {
-    0%{
-        transform: rotateZ(0deg);
-    }
-    100% {
-        transform: rotateZ(360deg);
-    }
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
 }
 
-@keyframes anim{
-    0% {
-        transform: rotateY(0deg);
-    }
-    100% {
-        transform: rotateY(360deg);
-    }
-} 
+@keyframes anim {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+  }
+}
 
-span:nth-child(2){
-    animation-delay: 0.1s;
+span:nth-child(2) {
+  animation-delay: 0.1s;
 }
-span:nth-child(3){
-    animation-delay: 0.2s;
+span:nth-child(3) {
+  animation-delay: 0.2s;
 }
-span:nth-child(4){
-    animation-delay: 0.3s;
+span:nth-child(4) {
+  animation-delay: 0.3s;
 }
-span:nth-child(5){
-    animation-delay: 0.4s;
+span:nth-child(5) {
+  animation-delay: 0.4s;
 }
-span:nth-child(6){
-    animation-delay: 0.5s;
+span:nth-child(6) {
+  animation-delay: 0.5s;
 }
-span:nth-child(7){
-    animation-delay: 0.6s;
+span:nth-child(7) {
+  animation-delay: 0.6s;
 }
-span:nth-child(8){
-    animation-delay: 0.7s;
+span:nth-child(8) {
+  animation-delay: 0.7s;
 }
-span:nth-child(9){
-    animation-delay: 0.8s;
+span:nth-child(9) {
+  animation-delay: 0.8s;
 }
-span:nth-child(10){
-    animation-delay: 0.9s;
+span:nth-child(10) {
+  animation-delay: 0.9s;
 }
-span:nth-child(11){
-    animation-delay: 1s;
+span:nth-child(11) {
+  animation-delay: 1s;
 }
-span:nth-child(12){
-    animation-delay: 1.1s;
+span:nth-child(12) {
+  animation-delay: 1.1s;
 }
-span:nth-child(13){
-    animation-delay: 1.2s;
+span:nth-child(13) {
+  animation-delay: 1.2s;
 }
-span:nth-child(14){
-    animation-delay: 1.3s;
+span:nth-child(14) {
+  animation-delay: 1.3s;
 }
-span:nth-child(15){
-    animation-delay: 1.4s;
+span:nth-child(15) {
+  animation-delay: 1.4s;
 }
-span:nth-child(16){
-    animation-delay: 1.5s;
+span:nth-child(16) {
+  animation-delay: 1.5s;
 }
-span:nth-child(17){
-    animation-delay: 1.6s;
+span:nth-child(17) {
+  animation-delay: 1.6s;
 }
